part3_task1 finished

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -264,6 +264,19 @@
           "optimized": true,
           "height": 73,
           "width": 74
+        },
+        "342ce0ec": {
+          "id": "342ce0ec",
+          "path": "img/icon-no.png",
+          "output": "img/icon-no.png",
+          "name": "icon-no.png",
+          "category": "IMAGE",
+          "size": 1476,
+          "type": "png",
+          "initialSize": 1476,
+          "optimized": false,
+          "height": 26,
+          "width": 26
         }
       },
       "deploymentHistory": {},
