--- a/prepros.cfg
+++ b/prepros.cfg
@@ -277,6 +277,188 @@
           "optimized": false,
           "height": 26,
           "width": 26
+        },
+        "fa81dedf": {
+          "id": "fa81dedf",
+          "path": "img/icon-logo-glasses-tablet.png",
+          "output": "img/icon-logo-glasses-tablet.png",
+          "name": "icon-logo-glasses-tablet.png",
+          "category": "IMAGE",
+          "size": 2301,
+          "type": "png",
+          "initialSize": 2301,
+          "optimized": false,
+          "height": 40,
+          "width": 60
+        },
+        "876ec0cd": {
+          "id": "876ec0cd",
+          "path": "img/bg-header-1x.jpg",
+          "output": "img/bg-header-1x.jpg",
+          "name": "bg-header-1x.jpg",
+          "category": "IMAGE",
+          "size": 97432,
+          "type": "jpg",
+          "initialSize": 97432,
+          "optimized": false,
+          "height": 488,
+          "width": 700
+        },
+        "3cfcce72": {
+          "id": "3cfcce72",
+          "path": "img/bg-header-2x.jpg",
+          "output": "img/bg-header-2x.jpg",
+          "name": "bg-header-2x.jpg",
+          "category": "IMAGE",
+          "size": 135667,
+          "type": "jpg",
+          "initialSize": 135667,
+          "optimized": false,
+          "height": 976,
+          "width": 1400
+        },
+        "36f68a96": {
+          "id": "36f68a96",
+          "path": "img/bg-iphone-1x.png",
+          "output": "img/bg-iphone-1x.png",
+          "name": "bg-iphone-1x.png",
+          "category": "IMAGE",
+          "size": 349779,
+          "type": "png",
+          "initialSize": 349779,
+          "optimized": false,
+          "height": 572,
+          "width": 516
+        },
+        "b61b44f0": {
+          "id": "b61b44f0",
+          "path": "img/bg-iphone-2x.png",
+          "output": "img/bg-iphone-2x.png",
+          "name": "bg-iphone-2x.png",
+          "category": "IMAGE",
+          "size": 312190,
+          "type": "png",
+          "initialSize": 312190,
+          "optimized": false,
+          "height": 545,
+          "width": 700
+        },
+        "3b7142e6": {
+          "id": "3b7142e6",
+          "path": "img/bg-advantages-iphone-2x.png",
+          "output": "img/bg-advantages-iphone-2x.png",
+          "name": "bg-advantages-iphone-2x.png",
+          "category": "IMAGE",
+          "size": 187963,
+          "type": "png",
+          "initialSize": 187963,
+          "optimized": false,
+          "height": 481,
+          "width": 268
+        },
+        "30afadf0": {
+          "id": "30afadf0",
+          "path": "img/icon-research.png",
+          "output": "img/icon-research.png",
+          "name": "icon-research.png",
+          "category": "IMAGE",
+          "size": 12379,
+          "type": "png",
+          "initialSize": 12379,
+          "optimized": false,
+          "height": 302,
+          "width": 262
+        },
+        "44925af4": {
+          "id": "44925af4",
+          "path": "img/bg-footer-map-2x.jpg",
+          "output": "img/bg-footer-map-2x.jpg",
+          "name": "bg-footer-map-2x.jpg",
+          "category": "IMAGE",
+          "size": 106075,
+          "type": "jpg",
+          "initialSize": 106075,
+          "optimized": false,
+          "height": 848,
+          "width": 700
+        },
+        "fcba110c": {
+          "id": "fcba110c",
+          "path": "img/icon-logo-footer-2x.png",
+          "output": "img/icon-logo-footer-2x.png",
+          "name": "icon-logo-footer-2x.png",
+          "category": "IMAGE",
+          "size": 3242,
+          "type": "png",
+          "initialSize": 3242,
+          "optimized": false,
+          "height": 40,
+          "width": 145
+        },
+        "4b00f753": {
+          "id": "4b00f753",
+          "path": "img/icon-social-yt.png",
+          "output": "img/icon-social-yt.png",
+          "name": "icon-social-yt.png",
+          "category": "IMAGE",
+          "size": 2606,
+          "type": "png",
+          "initialSize": 2606,
+          "optimized": false,
+          "height": 51,
+          "width": 52
+        },
+        "4db07a85": {
+          "id": "4db07a85",
+          "path": "img/icon-social-fb.png",
+          "output": "img/icon-social-fb.png",
+          "name": "icon-social-fb.png",
+          "category": "IMAGE",
+          "size": 2671,
+          "type": "png",
+          "initialSize": 2671,
+          "optimized": false,
+          "height": 51,
+          "width": 52
+        },
+        "7cc638a0": {
+          "id": "7cc638a0",
+          "path": "img/icon-social-tw.png",
+          "output": "img/icon-social-tw.png",
+          "name": "icon-social-tw.png",
+          "category": "IMAGE",
+          "size": 2915,
+          "type": "png",
+          "initialSize": 2915,
+          "optimized": false,
+          "height": 51,
+          "width": 52
+        },
+        "bb459254": {
+          "id": "bb459254",
+          "path": "img/icon-social-copyright-by.png",
+          "output": "img/icon-social-copyright-by.png",
+          "name": "icon-social-copyright-by.png",
+          "category": "IMAGE",
+          "size": 1252,
+          "type": "png",
+          "initialSize": 1252,
+          "optimized": false,
+          "height": 30,
+          "width": 27
+        },
+        "1097886c": {
+          "id": "1097886c",
+          "path": "img/icon-social-copyright-for.png",
+          "output": "img/icon-social-copyright-for.png",
+          "name": "icon-social-copyright-for.png",
+          "category": "IMAGE",
+          "size": 1409,
+          "type": "png",
+          "initialSize": 1409,
+          "optimized": false,
+          "height": 33,
+          "width": 27
         }
       },
       "deploymentHistory": {},
