desktop version beta

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -297,25 +297,12 @@
           "output": "img/bg-header-1x.jpg",
           "name": "bg-header-1x.jpg",
           "category": "IMAGE",
-          "size": 97432,
+          "size": 96566,
           "type": "jpg",
           "initialSize": 97432,
-          "optimized": false,
+          "optimized": true,
           "height": 488,
           "width": 700
-        },
-        "3cfcce72": {
-          "id": "3cfcce72",
-          "path": "img/bg-header-2x.jpg",
-          "output": "img/bg-header-2x.jpg",
-          "name": "bg-header-2x.jpg",
-          "category": "IMAGE",
-          "size": 135667,
-          "type": "jpg",
-          "initialSize": 135667,
-          "optimized": false,
-          "height": 976,
-          "width": 1400
         },
         "36f68a96": {
           "id": "36f68a96",
@@ -323,10 +310,10 @@
           "output": "img/bg-iphone-1x.png",
           "name": "bg-iphone-1x.png",
           "category": "IMAGE",
-          "size": 349779,
+          "size": 339613,
           "type": "png",
           "initialSize": 349779,
-          "optimized": false,
+          "optimized": true,
           "height": 572,
           "width": 516
         },
@@ -336,10 +323,10 @@
           "output": "img/bg-iphone-2x.png",
           "name": "bg-iphone-2x.png",
           "category": "IMAGE",
-          "size": 312190,
+          "size": 299882,
           "type": "png",
           "initialSize": 312190,
-          "optimized": false,
+          "optimized": true,
           "height": 545,
           "width": 700
         },
@@ -362,10 +349,10 @@
           "output": "img/icon-research.png",
           "name": "icon-research.png",
           "category": "IMAGE",
-          "size": 12379,
+          "size": 9030,
           "type": "png",
           "initialSize": 12379,
-          "optimized": false,
+          "optimized": true,
           "height": 302,
           "width": 262
         },
@@ -388,10 +375,10 @@
           "output": "img/icon-logo-footer-2x.png",
           "name": "icon-logo-footer-2x.png",
           "category": "IMAGE",
-          "size": 3242,
+          "size": 3208,
           "type": "png",
           "initialSize": 3242,
-          "optimized": false,
+          "optimized": true,
           "height": 40,
           "width": 145
         },
@@ -401,10 +388,10 @@
           "output": "img/icon-social-yt.png",
           "name": "icon-social-yt.png",
           "category": "IMAGE",
-          "size": 2606,
+          "size": 2126,
           "type": "png",
           "initialSize": 2606,
-          "optimized": false,
+          "optimized": true,
           "height": 51,
           "width": 52
         },
@@ -414,10 +401,10 @@
           "output": "img/icon-social-fb.png",
           "name": "icon-social-fb.png",
           "category": "IMAGE",
-          "size": 2671,
+          "size": 2256,
           "type": "png",
           "initialSize": 2671,
-          "optimized": false,
+          "optimized": true,
           "height": 51,
           "width": 52
         },
@@ -427,10 +414,10 @@
           "output": "img/icon-social-tw.png",
           "name": "icon-social-tw.png",
           "category": "IMAGE",
-          "size": 2915,
+          "size": 2509,
           "type": "png",
           "initialSize": 2915,
-          "optimized": false,
+          "optimized": true,
           "height": 51,
           "width": 52
         },
@@ -440,10 +427,10 @@
           "output": "img/icon-social-copyright-by.png",
           "name": "icon-social-copyright-by.png",
           "category": "IMAGE",
-          "size": 1252,
+          "size": 1160,
           "type": "png",
           "initialSize": 1252,
-          "optimized": false,
+          "optimized": true,
           "height": 30,
           "width": 27
         },
@@ -453,12 +440,168 @@
           "output": "img/icon-social-copyright-for.png",
           "name": "icon-social-copyright-for.png",
           "category": "IMAGE",
-          "size": 1409,
+          "size": 1234,
           "type": "png",
           "initialSize": 1409,
-          "optimized": false,
+          "optimized": true,
           "height": 33,
           "width": 27
+        },
+        "4e0b656a": {
+          "id": "4e0b656a",
+          "path": "img/icon-logo-glasses-desktop.png",
+          "output": "img/icon-logo-glasses-desktop.png",
+          "name": "icon-logo-glasses-desktop.png",
+          "category": "IMAGE",
+          "size": 4472,
+          "type": "png",
+          "initialSize": 4472,
+          "optimized": false,
+          "height": 40,
+          "width": 146
+        },
+        "3cfcce72": {
+          "id": "3cfcce72",
+          "path": "img/bg-header-2x.jpg",
+          "output": "img/bg-header-2x.jpg",
+          "name": "bg-header-2x.jpg",
+          "category": "IMAGE",
+          "size": 95951,
+          "type": "jpg",
+          "initialSize": 95951,
+          "optimized": false,
+          "height": 729,
+          "width": 1200
+        },
+        "88b4d3d1": {
+          "id": "88b4d3d1",
+          "path": "img/bg-iphone-3x.png",
+          "output": "img/bg-iphone-3x.png",
+          "name": "bg-iphone-3x.png",
+          "category": "IMAGE",
+          "size": 438726,
+          "type": "png",
+          "initialSize": 438726,
+          "optimized": false,
+          "height": 645,
+          "width": 1050
+        },
+        "b8107b95": {
+          "id": "b8107b95",
+          "path": "img/bg-header-3x.jpg",
+          "output": "img/bg-header-3x.jpg",
+          "name": "bg-header-3x.jpg",
+          "category": "IMAGE",
+          "size": 117057,
+          "type": "jpg",
+          "initialSize": 117057,
+          "optimized": false,
+          "height": 854,
+          "width": 1200
+        },
+        "2c2f81c9": {
+          "id": "2c2f81c9",
+          "path": "img/icon-advantages-1.png",
+          "output": "img/icon-advantages-1.png",
+          "name": "icon-advantages-1.png",
+          "category": "IMAGE",
+          "size": 129091,
+          "type": "png",
+          "initialSize": 129091,
+          "optimized": false,
+          "height": 481,
+          "width": 268
+        },
+        "dd665301": {
+          "id": "dd665301",
+          "path": "img/icon-advantages-2.png",
+          "output": "img/icon-advantages-2.png",
+          "name": "icon-advantages-2.png",
+          "category": "IMAGE",
+          "size": 183823,
+          "type": "png",
+          "initialSize": 183823,
+          "optimized": false,
+          "height": 481,
+          "width": 268
+        },
+        "ca4333ed": {
+          "id": "ca4333ed",
+          "path": "img/icon-advantages-3.png",
+          "output": "img/icon-advantages-3.png",
+          "name": "icon-advantages-3.png",
+          "category": "IMAGE",
+          "size": 187963,
+          "type": "png",
+          "initialSize": 187963,
+          "optimized": false,
+          "height": 481,
+          "width": 268
+        },
+        "3fc3554d": {
+          "id": "3fc3554d",
+          "path": "img/icon-feedback-right-arrow.png",
+          "output": "img/icon-feedback-right-arrow.png",
+          "name": "icon-feedback-right-arrow.png",
+          "category": "IMAGE",
+          "size": 1203,
+          "type": "png",
+          "initialSize": 1203,
+          "optimized": false,
+          "height": 42,
+          "width": 22
+        },
+        "a539dafc": {
+          "id": "a539dafc",
+          "path": "img/icon-feedback-left-arrow.png",
+          "output": "img/icon-feedback-left-arrow.png",
+          "name": "icon-feedback-left-arrow.png",
+          "category": "IMAGE",
+          "size": 1203,
+          "type": "png",
+          "initialSize": 1203,
+          "optimized": false,
+          "height": 42,
+          "width": 22
+        },
+        "f797a4c9": {
+          "id": "f797a4c9",
+          "path": "img/icon-feedback-quotes.png",
+          "output": "img/icon-feedback-quotes.png",
+          "name": "icon-feedback-quotes.png",
+          "category": "IMAGE",
+          "size": 2026,
+          "type": "png",
+          "initialSize": 2026,
+          "optimized": false,
+          "height": 64,
+          "width": 79
+        },
+        "7f93fb9b": {
+          "id": "7f93fb9b",
+          "path": "img/bg-footer-map-3x.jpg",
+          "output": "img/bg-footer-map-3x.jpg",
+          "name": "bg-footer-map-3x.jpg",
+          "category": "IMAGE",
+          "size": 197880,
+          "type": "jpg",
+          "initialSize": 197880,
+          "optimized": false,
+          "height": 976,
+          "width": 1200
+        },
+        "c7fc9748": {
+          "id": "c7fc9748",
+          "path": "img/icon-logo-footer-3x.png",
+          "output": "img/icon-logo-footer-3x.png",
+          "name": "icon-logo-footer-3x.png",
+          "category": "IMAGE",
+          "size": 4511,
+          "type": "png",
+          "initialSize": 4511,
+          "optimized": false,
+          "height": 40,
+          "width": 146
         }
       },
       "deploymentHistory": {},
