--- a/prepros.cfg
+++ b/prepros.cfg
@@ -277,6 +277,48 @@
           "optimized": false,
           "height": 26,
           "width": 26
+        },
+        "31462c45": {
+          "id": "31462c45",
+          "path": "scss/_normalize.scss",
+          "output": "css/_normalize.css",
+          "name": "_normalize.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "f0f65e5e": {
+          "id": "f0f65e5e",
+          "path": "scss/_reset.scss",
+          "output": "css/_reset.css",
+          "name": "_reset.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
