mobile-menu open and close

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -319,6 +319,21 @@
             "7e70da7e"
           ],
           "type": "sass"
+        },
+        "a0233e7c": {
+          "id": "a0233e7c",
+          "path": "js/script.js",
+          "output": "js/script-dist.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
